# exact-pi

./: .travis.yml  LICENSE  README.md  changelog.md  exact-pi.cabal
.github/workflows/: haskell-ci.yml
src/Data/: ExactPi.hs
src/Data/ExactPi/: TypeLevel.hs
test-suite/: Test.hs  TestUtils.hs
