name:                exact-pi
version:             0.5.0.2
synopsis:            Exact rational multiples of pi (and integer powers of pi)
description:         Provides an exact representation for rational multiples of pi alongside an approximate representation of all reals.
                     Useful for storing and computing with conversion factors between physical units.
homepage:            https://github.com/dmcclean/exact-pi/
bug-reports:         https://github.com/dmcclean/exact-pi/issues/
license:             MIT
license-file:        LICENSE
author:              Douglas McClean
maintainer:          douglas.mcclean@gmail.com
category:            Data
build-type:          Simple
extra-source-files:  README.md,
                     changelog.md
cabal-version:       >=1.10
tested-with:         GHC == 8.4.4
library
  exposed-modules:     Data.ExactPi,
                       Data.ExactPi.TypeLevel
  build-depends:       base >=4.11 && <5,
                       numtype-dk >= 0.5,
                       infinite-list < 0.2
  ghc-options:         -Wall
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite spec
  main-is:             Test.hs
  build-depends:       base >=4.11 && <5,
                       exact-pi,
                       numtype-dk >= 0.5,
                       QuickCheck >=2.10,
                       tasty >=0.10,
                       tasty-hunit >=0.9 && <0.11,
                       tasty-quickcheck >= 0.9 && <0.11
  if impl(ghc < 8.0)
    build-depends:     semigroups >=0.9 && < 1.0
  other-modules:       TestUtils
  type:                exitcode-stdio-1.0
  ghc-options:         -Wall
  hs-source-dirs:      test-suite
  default-language:    Haskell2010

source-repository head
  type:                git
  location:            https://github.com/dmcclean/exact-pi.git
