cabal-version:      >=1.10
name:               exact-pi
version:            0.5.0.2
license:            MIT
license-file:       LICENSE
maintainer:         douglas.mcclean@gmail.com
author:             Douglas McClean
tested-with:
    ghc ==9.12.2 ghc ==9.10.2 ghc ==9.8.4 ghc ==9.6.7 ghc ==9.4.8
    ghc ==9.2.8 ghc ==9.0.2 ghc ==8.10.7 ghc ==8.8.4 ghc ==8.6.5 ghc ==8.4.4

homepage:           https://github.com/dmcclean/exact-pi/
bug-reports:        https://github.com/dmcclean/exact-pi/issues/
synopsis:           Exact rational multiples of pi (and integer powers of pi)
description:
    Provides an exact representation for rational multiples of pi alongside an approximate representation of all reals.
    Useful for storing and computing with conversion factors between physical units.

category:           Data
build-type:         Simple
extra-source-files:
    README.md
    changelog.md

source-repository head
    type:     git
    location: https://github.com/dmcclean/exact-pi.git

library
    exposed-modules:
        Data.ExactPi
        Data.ExactPi.TypeLevel

    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base >=4.11 && <5,
        numtype-dk >=0.5 && <0.6,
        infinite-list <0.2

test-suite spec
    type:             exitcode-stdio-1.0
    main-is:          Test.hs
    hs-source-dirs:   test-suite
    other-modules:    TestUtils
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base >=4.11 && <5,
        exact-pi,
        QuickCheck >=2.10,
        tasty >=0.10,
        tasty-hunit >=0.9 && <0.11,
        tasty-quickcheck >=0.9 && <0.11
